--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -18425,7 +18425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18433,8 +18433,10 @@
     "    nearest = []\n",
     "    count = 0\n",
     "    trip_list = trips.copy()\n",
-    "    loc_start = distances.index()\n",
     "    distances = distance_all(selected_trip, trip_list)\n",
+    "    loc_start = distances.index(distances == 0)\n",
+    "    del distances[loc_start]\n",
+    "    del trip_list[loc_start]\n",
     "    while count < number:\n",
     "        loc = distances.index(min(distances))\n",
     "        nearest.append(trip_list[loc])\n",
@@ -18448,27 +18450,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'trip_distance': 18.38,\n",
-       "  'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'distance_from_selected': 0.0},\n",
-       " {'trip_distance': 7.78,\n",
+       "[{'trip_distance': 7.78,\n",
        "  'pickup_latitude': 40.64483,\n",
        "  'pickup_longitude': -73.781578,\n",
        "  'distance_from_selected': 0.0005},\n",
        " {'trip_distance': 12.7,\n",
        "  'pickup_latitude': 40.644657,\n",
        "  'pickup_longitude': -73.782229,\n",
-       "  'distance_from_selected': 0.0011}]"
+       "  'distance_from_selected': 0.0011},\n",
+       " {'trip_distance': 17.3,\n",
+       "  'pickup_latitude': 40.648509,\n",
+       "  'pickup_longitude': -73.783508,\n",
+       "  'distance_from_selected': 0.0042}]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
