automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -18563,7 +18563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "midtown_trip = dict(pickup_latitude=40.761710, pickup_longitude=-73.982760)"
+    "midtown_trip = {'pickup_latitude': 40.761710, 'pickup_longitude':-73.982760)"
    ]
   },
   {
